force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__CallStatus__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CallStatus__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>