force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__InitiationMethod__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__InitiationMethod__c</fullName>
    <label>Initiation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>